@@ -1,4 +1,0 @@
-SUBDIRS=src doc
-
-EXTRA_DIST=autogen.sh spawn-fcgi.1 CMakeLists.txt
-man1_MANS=spawn-fcgi.1
