@@ -1,5 +1,0 @@
-
-bin_PROGRAMS=spawn-fcgi
-spawn_fcgi_SOURCES=spawn-fcgi.c
-
-EXTRA_DIST=CMakeLists.txt config.h.cmake
