@@ -1,19 +1,0 @@
-
-/* generated by cmake, do not modify. modify config.h.cmake instead */
-
-/* Package data */
-
-#define PACKAGE_NAME "${PACKAGE_NAME}"
-#define PACKAGE_VERSION "${PACKAGE_VERSION}"
-
-/* grep HAVE_ CMakeLists.txt | sed -e 's/.*\(HAVE_[A-Z_]*\).*/#cmakedefine \1/' */
-
-#cmakedefine HAVE_GETOPT_H
-#cmakedefine HAVE_PWD_H
-#cmakedefine HAVE_SYS_WAIT_H
-#cmakedefine HAVE_SOCKLEN_T
-
-#cmakedefine HAVE_ISSETUGID
-#cmakedefine HAVE_INET_PTON
-
-#cmakedefine HAVE_IPV6
