@@ -4,6 +4,7 @@ NEWS
 ====
 
 - 1.6.6 -
+  * Use meson instead of autotools and cmake
 
 - 1.6.5 - 2022-12-21
   * Configure script cleanups (fixing detection of IPv6)
